@@ -4,6 +4,7 @@ import static io.pzstorm.storm.logging.StormLogger.LOGGER;
 
 import io.pzstorm.storm.core.StormClassTransformer;
 import io.pzstorm.storm.mod.ZomboidMod;
+import io.pzstorm.storm.util.StormEnv;
 import java.util.Collections;
 import java.util.List;
 
@@ -11,11 +12,18 @@ public class MapMetaSqliteMod implements ZomboidMod {
 
     @Override
     public void registerEventHandlers() {
-        LOGGER.info("Map Meta SQLite mod loaded");
+        if (StormEnv.isStormServer()) {
+            LOGGER.info("Map Meta SQLite mod loaded");
+        } else {
+            LOGGER.info("Map Meta SQLite mod skipped (client mode)");
+        }
     }
 
     @Override
     public List<StormClassTransformer> getClassTransformers() {
-        return Collections.emptyList();
+        if (!StormEnv.isStormServer()) {
+            return Collections.emptyList();
+        }
+        return List.of(new IsoMetaGridPatch());
     }
 }
